--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "Bare",
     "name": "startbootstrap-bare",
-    "version": "4.2.1",
+    "version": "^4.2.1",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
     },
@@ -29,13 +29,13 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-bare.git"
     },
     "dependencies": {
-        "bootstrap": "4.3.1",
-        "jquery": "3.4.1"
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.6.0"
     },
     "devDependencies": {
-        "browser-sync": "2.26.7",
+        "browser-sync": "^2.26.14",
         "del": "^4.1.1",
-        "gulp": "4.0.2",
-        "merge-stream": "2.0.0"
+        "gulp": "^4.0.2",
+        "merge-stream": "^2.0.0"
     }
 }
